# Aufgaben_Portfolio_Programmieren_I

./: CMakeLists.txt
Aufgabe1/: main.cpp
Aufgabe2/: Sprite.h  main.cpp
Aufgabe3/: Wuerfelspiel.cpp  Wuerfelspiel.h  main.cpp
Aufgabe4/: Baum.cpp  Baum.h  Blume.cpp  Blume.h  Gras.cpp  Gras.h  Pflanze.cpp  Pflanze.h  Strauch.cpp  Strauch.h  main.cpp
Aufgabe5/: MyCppArray.cpp  MyCppArray.h  MyCppArrayB.cpp  MyCppArrayB.h  main.cpp
Aufgabe6/: BaseCar.cpp  BaseCar.h  Brakes.cpp  Brakes.h  Engine.cpp  Engine.h  Frame.cpp  Frame.h  Gears.cpp  Gears.h  Suspension.cpp  Suspension.h  Wheels.cpp  Wheels.h  component.h  main.cpp
Aufgabe7/: Level.hpp  Sprite.cpp  main.cpp
Aufgabe7-8/: Level.hpp  Sprite.cpp  Sprite.hpp  main.cpp
